# Extra clean files so that maintainer-clean removes *everything*
DISTCLEANFILES = \
	aclocal.m4 compile config.guess config.sub \
	configure config.h.in depcomp install-sh ltmain.sh     \
	Makefile.in missing

SUBDIRS = base/src pkgconfig utils/src ilcore/src

DIST_SUBDIRS = base/src pkgconfig utils/src ilcore/src
